# nulm

./: .claudeignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NULM_DESIGN_STRATEGY.md  PROGRESSION.md  README.md  SECURITY.md  SUPPORT.md  agent_claims.json  agent_discussion.json  agent_prompts.py  claude_desktop_config.snippet.json  claudey_roadmap.html  dashboard.md  docker-compose.yml  prometheus.yml  pyproject.toml  release.sh
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  k8s.yml  publish.yml  release.yml
.opencode/: README.md  dcp.jsonc
.opencode/plans/: feature-plans.md
.opencode/rules/: api.md  refactor.md  security.md  testing.md
agents/autonomous/: research_competitor.py  run_autonomous.py  run_orchestrator.py  run_orchestrator_working.py  spawn_brainstorm.py  spawn_evaluation.py  spawn_implementation.py  spawn_qa.py  spawn_research.py
archive/: bugs.md  claude-bridge-plan.md  deepseek-bugs.md  desktop-commander-source-analysis.md  feature-roadmap.md  honesty.md  ideas.md  mainbug.md  progression-old.md  strategic-roadmap.md  suggestions.md
assets/social/: README.md
benchmarks/: README.md  example_baseline.json
benchmarks/baselines/: django_auth_baseline.json  fastapi_routing_baseline.json  rails_controller_baseline.json
benchmarks/profiles/: django_auth.json  fastapi_routing.json  rails_controller.json
codex rapor/: AgentRunRecord-Schema-Lifecycle-Phase1.md  Deterministic Agent Workflow Benchmark Scenario Catalog.md  Feature Surface Pruning Table.md  Test-Baseline-Inventory-Analysis.md
docs/: README.md  RELEASE-NOTES.md  STATUS.md  agent-quality-chat-flows.md  agent-quality-layer-plan.md  agent-runtime-remaining-work-plan.md  ai-collaboration-token-budget.md  architecture.md  competitive-analysis-desktopcommander.md  competitive-analysis-template.md  competitive-analysis.md  competitive-development-plan.md  compliance-readiness.md  continue-ai-checks-trial.md  deployment.md  desktop-commander-research-analysis-2.md  discoverability-plan.md  known-issues-and-improvements.md  mcp-tool-schema.md  merged-execution-plan.md  multi-agent-architecture-audit.md  multi-agent-execution-roadmap.md  multi-agent-feature-pruning-audit.md  multi-agent-runtime-baseline.md  observability.md  openapi.yaml  optional-dependencies.md  overnight-autopilot-plan.md  performance-and-completion-audit.md  policy-pr-workflow.md  product-roadmap.md  product-vision.md  publishing-checklist.md  pypi-release.md  roadmap.md  security-model.md  skill-discovery.md  social-launch.md  test-strategy.md
docs/planning/: feature_proposals.md  nulm-public-alpha-release-polish-plan.md
docs/social/: x-posts.md
examples/: SUBMISSION.md  claude_desktop_config.snippet.json  opencode.json.example
examples/security-layer/: audit-replay.json  blocked-shell.json  masked-secret.json  rule-ask.json
helm/nulm/: Chart.yaml  README.md  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service.yaml
output/: final_report_1778797627.json  qa_results_1778797627.json  round_1_features_agent1_1778797627.json  round_1_features_agent2_1778797627.json  round_1_features_agent3_1778797627.json  round_1_features_agent4_1778797627.json  round_1_features_agent5_1778797627.json  round_1_features_agent6_1778797627.json  round_1_features_agent7_1778797627.json  round_1_features_agent8_1778797627.json  round_1_features_agent9_1778797627.json  round_1_research_1778797627.json  round_1_votes_1778797627.json  round_2_refined_0_1778797627.json  round_2_refined_1_1778797627.json  round_2_refined_2_1778797627.json  round_2_refined_3_1778797627.json  round_2_refined_4_1778797627.json  round_2_refined_5_1778797627.json  round_2_refined_6_1778797627.json  round_2_votes_1778797627.json  round_3_final_votes_1778797627.json
scripts/: build_web.sh  release-gate.sh  strip-cursor-coauthor.sh
skills/: bridge-doctor.py  bridge-doctor.v1.json  debug-helper.py  debug-helper.v1.json  git-helper.py  git-helper.v1.json  security-scan.py  security-scan.v1.json
src/claude_bridge/: __init__.py  __main__.py  _approval_hierarchy.py  _audit_activity.py  _audit_appeal.py  _audit_core.py  _audit_export.py  _audit_index.py  _audit_logging.py  _audit_ops.py  _audit_query.py  _audit_query_parser.py  _audit_redaction.py  _benchmark_cron.py  _ci_audit.py  _config_cli.py  _context_compression.py  _control_plane_cli.py  _dashboard_task_runner.py  _detective_classifiers.py  _detective_investigator.py  _detective_learner.py  _detective_locator.py  _detective_report.py  _event_bus.py  _memory_store.py  _optimizations.py  _parallel_doctor.py  _parallel_executor.py  _process_session.py  _session_resume.py  _shell_analysis.py  _shell_constants.py  _shell_run.py  _shell_safety.py  _stream_events.py  _tunnel_manager.py  _worktree.py  adaptive_council.py  agent_advisor.py  (+101 more)
tasks/: README.md  TASK_TEMPLATE.md  needs-review.md
tasks/active/: apply-mega-plan-prompt.md  mega-action-plan.md  (+2 more)
tests/: __init__.py  conftest.py  helpers.py  test_adaptive_council.py  test_agent_advisor.py  test_ai_evaluator.py  test_ai_router.py  test_analysis_mode.py  test_anomaly.py  test_anomaly_scorer.py  test_appeal.py  test_approach_explorer.py  test_audit.py  test_audit_anomaly.py  test_baseline.py  test_benchmarking.py  test_bookmarklet.py  test_cli.py  test_config.py  test_context_compression.py  test_control_plane.py  test_council.py  test_detective.py  test_distributed_cache.py  test_doctor.py  test_env_config.py  test_file_tools.py  test_git.py  test_guard_policy.py  test_indexing.py  test_indexing_cache.py  test_insights.py  test_integration.py  test_intent_engine.py  test_mcp_discovery.py  test_mcp_peer.py  test_memory.py  test_meta_tool_server.py  test_multi_format.py  test_parallel_workflow.py  (+37 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+98 files in other folders)
