[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-bridge"
version = "0.1.0"
description = "Claude.ai için yerel dosya ve terminal erişimi sağlayan köprü aracı"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Claude Bridge Contributors"}
]
keywords = ["claude", "ai", "bridge", "files", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.6.1",
    "pathspec>=0.12.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
legacy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
treesitter = [
    "tree-sitter-language-pack>=0.2.0",
]
smart = [
    "tiktoken>=0.7.0",
    "charset-normalizer>=3.0.0",
]

[project.scripts]
claude-bridge = "claude_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
