[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nulm"
version = "0.1.10"
description = "Local-first MCP agent quality and execution layer with guarded local tools"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Kerem Dilker"},
    {email = "keremdilker@gmail.com"},
]
maintainers = [
    {name = "Kerem Dilker"},
    {email = "keremdilker@gmail.com"},
]
keywords = ["nulm", "mcp", "security", "policy", "audit", "ai", "agent-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.6.1",
    "pathspec>=0.12.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "regex>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/3keggo3-hash/nulm"
Repository = "https://github.com/3keggo3-hash/nulm"
Documentation = "https://github.com/3keggo3-hash/nulm#readme"
"Bug Tracker" = "https://github.com/3keggo3-hash/nulm/issues"
Changelog = "https://github.com/3keggo3-hash/nulm/blob/main/CHANGELOG.md"

[project.optional-dependencies]
legacy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "tomli>=2.0.0",
]
treesitter = [
    "tree-sitter-language-pack>=0.2.0,<1.0",
]
smart = [
    "tiktoken>=0.7.0",
    "charset-normalizer>=3.0.0",
]
memory = [
    "cryptography>=42.0.0",
]
multi-format = [
    "Pillow>=10.0.0",
    "PyPDF2>=3.0.0",
]
recommended = [
    "tree-sitter-language-pack>=0.2.0,<1.0",
    "tiktoken>=0.7.0",
    "charset-normalizer>=3.0.0",
    "Pillow>=10.0.0",
    "PyPDF2>=3.0.0",
    "PyYAML>=6.0",
]
policy-yaml = [
    "PyYAML>=6.0",
]
redis = [
    "redis>=5.0.0",
]
observability = [
    "prometheus-client>=0.19.0",
]
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
streaming = [
    "sse-starlette>=2.0.0",
    "websockets>=10.0",
]

[project.scripts]
nulm = "claude_bridge.cli:main"
claude-bridge = "claude_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
extend-exclude = '''
(
  ^/agents/autonomous/
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Experimental autonomous research scripts are not part of the supported release surface.
    "agents/autonomous",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*", "websockets.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests for component interaction",
    "e2e: end-to-end tests for full workflows",
]
